--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,7 @@ html {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url(/public/img/3.jpg);
+  background-image: url(/public/img/1.jpg);
   background-size: cover;
   background-position: center;
   display: flex;
@@ -158,6 +158,15 @@ pre {
 
 .search > header + div {
   margin-top: 25px;
+}
+
+.add {
+  position: relative;
+  left: 100px;
+}
+
+.delete {
+  margin: 40px !important;
 }
 
 header {
